feat: support web standards

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "env": {
-        "node": true,
+        "worker": true,
         "es6": true,
-        "mocha": true
+        "jest": true
     }
 }
