--- a/package.json
+++ b/package.json
@@ -1,48 +1,86 @@
 {
-    "name": "@web-widget/http-cache-semantics",
-    "type": "module",
-    "version": "0.0.1",
-    "description": "Parses Cache-Control and other headers. Helps building correct HTTP caches and proxies",
-    "repository": {
-        "url": "git+https://github.com/web-widget/http-cache-semantics.git"
-    },
-    "exports": {
-        ".": {
-            "types": "./dist/http-cache-semantics.d.ts",
-            "development": "./src/index.ts",
-            "default": "./dist/http-cache-semantics.js"
-        }
-    },
-    "scripts": {
-        "build": "pnpm exec tsup",
-        "dev": "pnpm exec tsup --watch",
-        "test": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest",
-        "test:coverage": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --coverage",
-        "clean:build": "rm -rf dist",
-        "clean:node": "rm -rf node_modules",
-        "prebuild": "pnpm run clean:build"
-    },
-    "files": [
-        "dist"
-    ],
-    "author": "Kornel Lesiński <kornel@geekhood.net> (https://kornel.ski/)",
-    "license": "BSD-2-Clause",
-    "devDependencies": {
-        "@types/jest": "^29.5.3",
-        "jest": "^29.6.2",
-        "miniflare": "^3.20240129.1",
-        "jest-environment-miniflare": "^2.14.2",
-        "ts-jest": "^29.1.1",
-        "tsup": "^8.0.1",
-        "typescript": "latest"
-    },
-    "publishConfig": {
-        "access": "public",
-        "exports": {
-            ".": {
-                "types": "./dist/http-cache-semantics.d.ts",
-                "default": "./dist/http-cache-semantics.js"
-            }
-        }
+  "name": "@web-widget/http-cache-semantics",
+  "description": "Parses Cache-Control and other headers. Helps building correct HTTP caches and proxies",
+  "homepage": "https://github.com/web-widget/http-cache-semantics#readme",
+  "version": "0.0.1",
+  "exports": {
+    ".": {
+      "types": "./dist/http-cache-semantics.d.ts",
+      "development": "./src/index.ts",
+      "default": "./dist/http-cache-semantics.js"
     }
+  },
+  "author": {
+    "email": "kornel@geekhood.net",
+    "name": "Kornel Lesiński",
+    "url": "https://kornel.ski/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/web-widget/http-cache-semantics.git"
+  },
+  "bugs": {
+    "url": "https://github.com/web-widget/http-cache-semantics/issues"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@types/jest": "^29.5.3",
+    "finepack": "latest",
+    "git-authors-cli": "latest",
+    "jest": "^29.6.2",
+    "jest-environment-miniflare": "^2.14.2",
+    "miniflare": "^3.20240129.1",
+    "nano-staged": "latest",
+    "prettier": "latest",
+    "simple-git-hooks": "latest",
+    "ts-jest": "^29.1.1",
+    "tsup": "^8.0.1",
+    "typescript": "latest"
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "pnpm exec tsup",
+    "changeset": "changeset",
+    "clean:build": "rm -rf dist",
+    "clean:node": "rm -rf node_modules",
+    "contributors": "git-authors-cli && finepack",
+    "coverage": "c8 report",
+    "dev": "pnpm exec tsup --watch",
+    "lint": "turbo run lint",
+    "lockfile": "pnpm install --lockfile && git add pnpm-lock.yaml && git commit -m \"build: regenerate lock\"",
+    "postinstall": "./node_modules/.bin/simple-git-hooks",
+    "prebuild": "pnpm run clean:build",
+    "prettier": "prettier **/*.{ts,tsx,js,vue} --write",
+    "test": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --coverage",
+    "update": "pnpm -r exec ncu -- --upgrade && ncu -- --upgrade",
+    "update:check": "pnpm -r exec ncu -- --errorLevel 2 && ncu -- --errorLevel 2",
+    "version:prepare": "changeset version && pnpm install --no-frozen-lockfile",
+    "version:publish": "changeset publish"
+  },
+  "license": "BSD-2-Clause",
+  "nano-staged": {
+    "*.{ts,tsx,md,mdx,js,jsx}": [
+      "prettier --write"
+    ],
+    "package.json": [
+      "finepack"
+    ]
+  },
+  "packageManager": "pnpm@8.4.0",
+  "publishConfig": {
+    "access": "public",
+    "exports": {
+      ".": {
+        "types": "./dist/http-cache-semantics.d.ts",
+        "default": "./dist/http-cache-semantics.js"
+      }
+    }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "./node_modules/.bin/nano-staged"
+  },
+  "type": "module"
 }
