--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@types/jest": "^29.5.3",
+    "c8": "latest",
     "finepack": "latest",
     "git-authors-cli": "latest",
     "jest": "^29.6.2",
@@ -47,14 +48,14 @@
     "clean:node": "rm -rf node_modules",
     "contributors": "git-authors-cli && finepack",
     "coverage": "c8 report",
+    "coverage:html": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --coverage",
     "dev": "pnpm exec tsup --watch",
     "lint": "turbo run lint",
     "lockfile": "pnpm install --lockfile && git add pnpm-lock.yaml && git commit -m \"build: regenerate lock\"",
-    "postinstall": "./node_modules/.bin/simple-git-hooks",
+    "postinstall": "simple-git-hooks",
     "prebuild": "pnpm run clean:build",
     "prettier": "prettier **/*.{ts,tsx,js,vue} --write",
-    "test": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules c8 jest",
     "update": "pnpm -r exec ncu -- --upgrade && ncu -- --upgrade",
     "update:check": "pnpm -r exec ncu -- --errorLevel 2 && ncu -- --errorLevel 2",
     "version:prepare": "changeset version && pnpm install --no-frozen-lockfile",
