--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "prettier": "latest",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
-    "typescript": "latest"
+    "typescript": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest"
   },
   "files": [
     "dist"
@@ -48,7 +53,7 @@
     "coverage": "c8 report",
     "coverage:html": "NODE_OPTIONS=--experimental-vm-modules pnpm exec jest --coverage",
     "dev": "pnpm exec tsup --watch",
-    "lint": "turbo run lint",
+    "lint": "eslint .",
     "lockfile": "pnpm install --lockfile && git add pnpm-lock.yaml && git commit -m \"build: regenerate lock\"",
     "prebuild": "pnpm run clean:build",
     "prettier": "prettier **/*.{ts,tsx,js,vue} --write",
